--- a/index.html
+++ b/index.html
@@ -1,24 +1,23 @@
-<DOCTYPE! html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
-        <link href="css/normalize.css" rel="stylesheet">
-        <link href="css/style.css" rel="stylesheet">
+        <title>Webdesign</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="UTF-8">
-        <title>Webdesign</title>
-        
+        <link href="css/normalize.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
     <!--Main content area-->
         <div class="content-top">
             <!--Top Navigation-->
-            <section class="nav">    
+            <nav class="nav">    
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
-            </section>
+            </nav>
             <p>Lorem</p>
         </div>
         <div class="content-col-1">
@@ -33,15 +32,13 @@
 <!--Here comes the Footer -->
         <section class="footer">
             <h2>Follow us</h2>
-            <p>
                 <ul>
-                    <li><a href="#">Twitter</a></li>
-                    <li><a href="#">Facebook</a></li>
-                    <li><a href="#">Linkedin</a></li>
-                    <li><a href="#">Pinterest</a></li>
-                    <li><a href="#">YouTube</a></li>
+                        <li><a href="#">Twitter</a></li>
+                        <li><a href="#">Facebook</a></li>
+                        <li><a href="#">Linkedin</a></li>
+                        <li><a href="#">Pinterest</a></li>
+                        <li><a href="#">YouTube</a></li>
                 </ul>
-            </p>
         </section>
         <section class="footer">
             <h2>Get to know us</h2>
