--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
-            <p>Lorem</p>
+            <h1>Web Design</h1>
         </div>
         <div class="content-col-1">
         </div>
@@ -49,8 +49,8 @@
         <section class="footer">
             <h2>Our Mission</h2>
         </section>
-        <section class="copyright">
-            <p>Developed by &copy <a href="#">New Rise Development 2017</a></p>
-        </section>
+        <div class="copyright">
+            <p>Developed by &copy; <a href="#">New Rise Development 2017</a></p>
+        </div>
     </body>
 </html>
