--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
-            <h1>Web Design</h1>
+        <h1>Web Design</h1>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. </br>
+            Aenean commodo ligula eget dolor. </br>
+            Aenean massa</p>
+        <button type="button">Realy?</button>
+
         </div>
         <div class="content-col-1">
         </div>
