- footer contents ready

--- a/index.html
+++ b/index.html
@@ -37,22 +37,40 @@
 <!--Here comes the Footer -->
         <section class="footer">
             <h2>Follow us</h2>
-                <ul>
-                        <li><a href="#">Twitter</a></li>
-                        <li><a href="#">Facebook</a></li>
-                        <li><a href="#">Linkedin</a></li>
-                        <li><a href="#">Pinterest</a></li>
-                        <li><a href="#">YouTube</a></li>
-                </ul>
+            <ul>
+                <li><a href="#">Twitter</a></li>
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">Linkedin</a></li>
+                <li><a href="#">Pinterest</a></li>
+                <li><a href="#">YouTube</a></li>
+            </ul>
         </section>
         <section class="footer">
             <h2>Get to know us</h2>
+            <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Policies</a></li>
+                <li><a href="#">Careers</a></li>
+                <li><a href="#">Press</a></li>
+                <li><a href="#">Developers</a></li>
+            </ul>
         </section>
         <section class="footer">
             <h2>Locations</h2>
+            <ul>
+                <li><a href="#">Detroit</a></li>
+                <li><a href="#">London</a></li>
+                <li><a href="#">Florida</a></li>
+                <li><a href="#">Las Vegas</a></li>
+                <li><a href="#">California</a></li>
+            </ul>
         </section>
         <section class="footer">
             <h2>Our Mission</h2>
+            <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris 
+                condimentum nibh, ut fermentum massa justo sit amet 
+                risus. Integer posuere erat a ante venenatis dapibus 
+            </p>
         </section>
         <div class="copyright">
             <p>Developed by &copy; <a href="#">New Rise Development 2017</a></p>
