- come content cols modification

--- a/index.html
+++ b/index.html
@@ -26,12 +26,16 @@
 
         </div>
         <div class="content-col-1">
+            <h2>Amet Condimentum</h2>
         </div>
         <div class="content-col-2">
+            <h2>Lorem Cursus</h2>
         </div>
         <div class="content-col-3">
+            <h2>Condimentum Ultricies</h2>
         </div>
         <div class="content-col-4">
+            <h2>Ridiculus Ornare</h2>
         </div>
      
 <!--Here comes the Footer -->
