- all ready exept menu and play SVGs

--- a/index.html
+++ b/index.html
@@ -22,20 +22,24 @@
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. </br>
             Aenean commodo ligula eget dolor. </br>
             Aenean massa</p>
-        <button type="button">Realy?</button>
+        <button type="button">Really?</button>
 
         </div>
         <div class="content-col-1">
             <h2>Amet Condimentum</h2>
+            <p>Dolor</p>
         </div>
         <div class="content-col-2">
             <h2>Lorem Cursus</h2>
+            <p>Ligula</p>
         </div>
         <div class="content-col-3">
             <h2>Condimentum Ultricies</h2>
+            <p>Consectetur</p>
         </div>
         <div class="content-col-4">
             <h2>Ridiculus Ornare</h2>
+            <p>Ullamcorper</p>
         </div>
      
 <!--Here comes the Footer -->
