--- a/index.html
+++ b/index.html
@@ -12,17 +12,22 @@
         <div class="content-top">
             <!--Top Navigation-->
             <nav class="nav">    
+                <!--<div class="logo">
+                    <img src="res/img/logo.png" alt="" height="14px" width="14px">
+                </div>-->    
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
-        <h1>Web Design</h1>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. </br>
-            Aenean commodo ligula eget dolor. </br>
-            Aenean massa</p>
-        <button type="button">Really?</button>
+            <hr>
+            <h1>Web Design</h1>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. </br>
+                Aenean commodo ligula eget dolor. </br>
+                Aenean massa</p>
+            <button type="button" autofocus>Really?</button>
+            <div class="play"><a href="#"><img src="res/img/play_btn.png" height="50px" width="50px"></a></div>
 
         </div>
         <div class="content-col-1">
@@ -43,6 +48,7 @@
         </div>
      
 <!--Here comes the Footer -->
+    <footer>    
         <section class="footer">
             <h2>Follow us</h2>
             <ul>
@@ -80,6 +86,7 @@
                 risus. Integer posuere erat a ante venenatis dapibus 
             </p>
         </section>
+    </footer>
         <div class="copyright">
             <p>Developed by &copy; <a href="#">New Rise Development 2017</a></p>
         </div>
