--- a/index.html
+++ b/index.html
@@ -12,15 +12,20 @@
         <div class="content-top">
             <!--Top Navigation-->
             <nav class="nav">    
-                <!--<div class="logo">
+                <div class="logo">
                     <img src="res/img/logo.png" alt="" height="14px" width="14px">
-                </div>-->    
+                </div>
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
+                <div class="menu">
+                    <img src="res/img/search.png" alt="" height="14px" width="14px">
+                    <img src="res/img/hamburger.png" alt="" height="14px" width="14px">
+                </div>
             </nav>
+            
             <hr>
             <h1>Web Design</h1>
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. </br>
